# qt_minesweeper

./: CMakeLists.txt  README.md  cellitem.cpp  cellitem.h  configdialog.cpp  configdialog.h  fielddata.cpp  fielddata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  minesweepscene.cpp  minesweepscene.h  sweep_minesV1.pro
